Added pages and assets

--- a/ACE/Resources/layout/Language.axml
+++ b/ACE/Resources/layout/Language.axml
@@ -10,24 +10,53 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:translationY="-85dp"
+        android:translationY="-200dp"
         android:text="@string/English"
         android:width="350dp"
-        android:height="100dp"
-        android:background="@color/CBSA_Blue"
-        android:textColor="@android:color/white"/>
+        android:height="75dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+    />
+    <Button
+        android:id="@+id/privacyBttn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@id/englishBttn"
+        android:layout_centerInParent="true"
+        android:translationY="-200dp"
+        android:text="@string/PrivacyBttn"
+        android:width="350dp"
+        android:height="75dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+        />
     <Button
         android:id="@+id/frenchBttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
-        android:layout_below="@id/englishBttn"
+        android:layout_marginTop="25dp"
+        android:layout_below="@id/privacyBttn"
         android:layout_centerInParent="true"
-        android:translationY="-85dp"
+        android:translationY="-120dp"
         android:text="@string/French"
         android:width="350dp"
-        android:height="100dp"
-        android:background="@color/CBSA_Blue"
-        android:textColor="@android:color/white"
+        android:height="75dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+        />
+    <Button
+        android:id="@+id/avisBttn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_below="@id/frenchBttn"
+        android:layout_centerInParent="true"
+        android:translationY="-120dp"
+        android:text="@string/Avis"
+        android:width="350dp"
+        android:height="75dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
         />
 </RelativeLayout>
