Added pages and fixed onboarding screens

--- a/ACE/Resources/layout/Language.axml
+++ b/ACE/Resources/layout/Language.axml
@@ -10,10 +10,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:translationY="-200dp"
+        android:translationY="-180dp"
         android:text="@string/English"
         android:width="350dp"
-        android:height="75dp"
+        android:height="55dp"
         android:background="@android:color/white"
         android:textColor="@android:color/black"
     />
@@ -24,10 +24,10 @@
         android:layout_marginTop="25dp"
         android:layout_below="@id/englishBttn"
         android:layout_centerInParent="true"
-        android:translationY="-200dp"
+        android:translationY="-180dp"
         android:text="@string/PrivacyBttn"
         android:width="350dp"
-        android:height="75dp"
+        android:height="55dp"
         android:background="@android:color/white"
         android:textColor="@android:color/black"
         />
@@ -38,10 +38,10 @@
         android:layout_marginTop="25dp"
         android:layout_below="@id/privacyBttn"
         android:layout_centerInParent="true"
-        android:translationY="-120dp"
+        android:translationY="-100dp"
         android:text="@string/French"
         android:width="350dp"
-        android:height="75dp"
+        android:height="55dp"
         android:background="@android:color/white"
         android:textColor="@android:color/black"
         />
@@ -52,11 +52,18 @@
         android:layout_marginTop="25dp"
         android:layout_below="@id/frenchBttn"
         android:layout_centerInParent="true"
-        android:translationY="-120dp"
+        android:translationY="-100dp"
         android:text="@string/Avis"
         android:width="350dp"
-        android:height="75dp"
+        android:height="55dp"
         android:background="@android:color/white"
         android:textColor="@android:color/black"
         />
+    <ImageView
+        android:src="@drawable/CanadaFooter"
+        android:layout_width="fill_parent"
+        android:layout_height="50pt"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:id="@+id/imageView1" />
 </RelativeLayout>
