--- a/ACE/Resources/layout/PrivacyPolicyEN.axml
+++ b/ACE/Resources/layout/PrivacyPolicyEN.axml
@@ -5,17 +5,25 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@android:style/Theme.DeviceDefault.Light"
     >
     <TextView
         android:id="@+id/contentEN"
         android:layout_width="wrap_content"
-        android:layout_height="970dp"
+        android:layout_height="550dp"
+        android:maxLines="18"
+        android:isScrollContainer="true"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textAlignment="center"
         android:textSize="10pt"
         android:textColor="@android:color/white"
         android:text="@string/PrivacyPolicyContent"
+        android:justificationMode="none"
+        android:nestedScrollingEnabled="true"
+        android:textDirection="inherit"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="insideOverlay" 
         />
     <ImageView
         android:src="@drawable/CanadaFooter"
