--- a/ACE/Resources/layout/Search.axml
+++ b/ACE/Resources/layout/Search.axml
@@ -1,3 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
-</LinearLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    
+    <Button
+        android:id="@+id/MakeBttn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:translationY="-180dp"
+        android:text="@string/Make"
+        android:width="350dp"
+        android:height="55dp"
+        android:textAlignment="viewStart"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+    />
+    <Button
+        android:id="@+id/ModelBttn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/MakeBttn"
+        android:layout_marginTop="20dp"
+        android:translationY="-180dp"
+        android:text="@string/Model"
+        android:width="350dp"
+        android:height="55dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+    />
+    <Button
+        android:id="@+id/YearBttn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/ModelBttn"
+        android:layout_marginTop="20dp"
+        android:translationY="-180dp"
+        android:text="@string/Year"
+        android:width="350dp"
+        android:height="55dp"
+        android:background="@android:color/white"
+        android:textColor="@android:color/black"
+    />
+    
+</RelativeLayout>
