--- a/ACE/Resources/layout/PrivacyPolicyEN.axml
+++ b/ACE/Resources/layout/PrivacyPolicyEN.axml
@@ -1,36 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/CBSA_Blue"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:rowCount="2"
+    android:columnCount="1"
     >
     <TextView
         android:id="@+id/contentEN"
         android:layout_width="wrap_content"
-        android:layout_height="550dp"
-        android:maxLines="18"
+        android:layout_height="match_parent"
         android:isScrollContainer="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:textSize="10pt"
         android:textColor="@android:color/white"
         android:text="@string/PrivacyPolicyContent"
         android:justificationMode="none"
         android:nestedScrollingEnabled="true"
         android:textDirection="inherit"
-        android:scrollbars="vertical"
-        android:scrollbarStyle="insideOverlay" 
+        android:scrollbars="none"
+        android:scrollbarStyle="insideOverlay"
+        android:layout_row="0"
         />
+        
     <ImageView
         android:src="@drawable/CanadaFooter"
         android:layout_width="fill_parent"
         android:layout_height="50pt"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:id="@+id/imageView1" />
-
-</RelativeLayout>
+        android:layout_gravity="bottom"
+        android:id="@+id/imageView1"
+        android:layout_row="1"/>
+        
+</GridLayout>
