--- a/ACE/Resources/layout/Language.axml
+++ b/ACE/Resources/layout/Language.axml
@@ -5,58 +5,70 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <Button
+    <ImageButton
         android:id="@+id/englishBttn"
+        android:src="@drawable/englishbttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:translationY="-180dp"
+        android:translationY="-220dp"
         android:text="@string/English"
-        android:width="350dp"
-        android:height="55dp"
-        android:background="@android:color/white"
+        android:maxWidth="300dp"
+        android:maxHeight="300dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:background="@color/CBSA_Blue"
         android:textColor="@android:color/black"
     />
-    <Button
+    <ImageButton
         android:id="@+id/privacyBttn"
+        android:src="@drawable/privacybttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_below="@id/englishBttn"
         android:layout_centerInParent="true"
-        android:translationY="-180dp"
+        android:translationY="-220dp"
         android:text="@string/PrivacyBttn"
-        android:width="350dp"
-        android:height="55dp"
-        android:background="@android:color/white"
+        android:maxWidth="300dp"
+        android:maxHeight="300dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:background="@color/CBSA_Blue"
         android:textColor="@android:color/black"
         />
-    <Button
+    <ImageButton
         android:id="@+id/frenchBttn"
+        android:src="@drawable/frenchbttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_below="@id/privacyBttn"
         android:layout_centerInParent="true"
-        android:translationY="-100dp"
+        android:translationY="-180dp"
         android:text="@string/French"
-        android:width="350dp"
-        android:height="55dp"
-        android:background="@android:color/white"
+        android:maxWidth="300dp"
+        android:maxHeight="300dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:background="@color/CBSA_Blue"
         android:textColor="@android:color/black"
         />
-    <Button
+    <ImageButton
         android:id="@+id/avisBttn"
+        android:src="@drawable/avisbttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_below="@id/frenchBttn"
         android:layout_centerInParent="true"
-        android:translationY="-100dp"
+        android:translationY="-180dp"
         android:text="@string/Avis"
-        android:width="350dp"
-        android:height="55dp"
-        android:background="@android:color/white"
+        android:maxWidth="300dp"
+        android:maxHeight="300dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:background="@color/CBSA_Blue"
         android:textColor="@android:color/black"
         />
     <ImageView
