--- a/ACE/Resources/layout/PrivacyPolicyEN.axml
+++ b/ACE/Resources/layout/PrivacyPolicyEN.axml
@@ -8,10 +8,11 @@
     android:rowCount="2"
     android:columnCount="1"
     >
+     <ScrollView Orientation="Vertical" android:layout_height="500dp">
     <TextView
         android:id="@+id/contentEN"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:isScrollContainer="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
@@ -20,14 +21,9 @@
         android:textSize="10pt"
         android:textColor="@android:color/white"
         android:text="@string/PrivacyPolicyContent"
-        android:justificationMode="none"
-        android:nestedScrollingEnabled="true"
-        android:textDirection="inherit"
-        android:scrollbars="none"
-        android:scrollbarStyle="insideOverlay"
         android:layout_row="0"
         />
-        
+        </ScrollView>
     <ImageView
         android:src="@drawable/CanadaFooter"
         android:layout_width="fill_parent"
