--- a/ACE/app/src/main/res/layout/main.xml
+++ b/ACE/app/src/main/res/layout/main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     >
     <ImageButton
+        android:id="@+id/SettingsBttnE"
         android:src="@drawable/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
