Search page uses backend

--- a/ACE/app/src/main/res/layout/imageview.xml
+++ b/ACE/app/src/main/res/layout/imageview.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/CBSA_Blue"
+            app:titleTextColor="@android:color/white"
+            app:title="@string/CarDetail"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        <Button
+                android:id="@+id/listViewBttn"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:background="@color/CBSA_Blue"
+                android:textColor="@android:color/white"
+                android:text="@string/ListView"
+                android:layout_gravity="right"
+        />
+    </android.support.v7.widget.Toolbar>
+
+</RelativeLayout>
