--- a/ACE/app/src/main/res/values/string.xml
+++ b/ACE/app/src/main/res/values/string.xml
@@ -7,6 +7,7 @@
     <string name="PrivacyPolicyEN">PrivacyPolicy</string>
     <string name="PrivacyPolicyFR">Avis</string>
     <string name="Settings">Settings</string>
+    <string name="CarDetail">CarDetail</string>
 
     <!--Buttons-->
     <string name="English">English</string>
@@ -16,12 +17,14 @@
     <string name="Accept">Accept</string>
     <string name="Decline">Decline</string>
     <string name="GetStarted">Get Started</string>
-    <string name="Scan">Scan</string>
+    <string name="VoiceSearch">Voice Search</string>
     <string name="Search">Search</string>
     <string name="Make">Make</string>
     <string name="Model">Model</string>
     <string name="Year">Year</string>
     <string name="Trim">Trim</string>
+    <string name="AddVehicle">Add Vehicle</string>
+    <string name="ListView">List View</string>
 
     <!--Content-->
     <string name="PrivacyPolicyContent">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway</string>
