Search page works now

--- a/ACE/app/src/main/res/layout/main.xml
+++ b/ACE/app/src/main/res/layout/main.xml
@@ -39,7 +39,7 @@
             android:layout_below="@id/title"
             android:layout_centerInParent="true"
             android:background="@drawable/roundedbttn"
-            android:text="@string/Search"
+            android:text="@string/English"
             android:textColor="#fff"
             android:layout_centerHorizontal="true"
             android:width="350dp"
@@ -55,7 +55,7 @@
             android:layout_below="@id/SearchBttnE"
             android:layout_centerInParent="true"
             android:background="@drawable/roundedbttn"
-            android:text="@string/VoiceSearch"
+            android:text="@string/French"
             android:textColor="#fff"
             android:layout_centerHorizontal="true"
             android:width="350dp"
