--- a/ACE/app/src/main/res/layout/imageview.xml
+++ b/ACE/app/src/main/res/layout/imageview.xml
@@ -25,7 +25,7 @@
                 android:background="@color/CBSA_Blue"
                 android:textColor="@android:color/white"
                 android:text="@string/ListView"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:elevation="0dp"/>
     </android.support.v7.widget.Toolbar>
 
@@ -55,15 +55,15 @@
 
     </android.support.design.widget.TabLayout>
 
-    <GridLayout
-                android:id="@+id/fragmentTest"
-                android:layout_width="500dp"
-                android:layout_height="500dp">
 
+    <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tabLayout"
+            android:layout_alignParentBottom="true"
 
-    </GridLayout>
-
-
+    />
 
 
 
@@ -73,9 +73,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/pluswhite"
             app:backgroundTint="@color/CBSA_Blue"/>
+
+
 
 </RelativeLayout>
