--- a/ACE/app/src/main/res/layout/imageview.xml
+++ b/ACE/app/src/main/res/layout/imageview.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+        android:id="@+id/layout"
 >
 
     <android.support.v7.widget.Toolbar
@@ -62,7 +63,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tabLayout"
             android:layout_alignParentBottom="true"
-
     />
 
 
