Need to fix TabLayout persistence

--- a/ACE/app/src/main/res/layout/addhotspot.xml
+++ b/ACE/app/src/main/res/layout/addhotspot.xml
@@ -43,5 +43,12 @@
             android:layout_below="@id/toolbar"
             android:layout_alignParentBottom="true"
     />
+    <ImageView
+            android:id="@+id/previousHotspotImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:layout_alignParentBottom="true"
+    />
 
 </RelativeLayout>
