--- a/ACE/app/src/main/res/layout/imageview.xml
+++ b/ACE/app/src/main/res/layout/imageview.xml
@@ -72,16 +72,11 @@
             android:layout_alignParentBottom="true"
     />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:id="@+id/fab"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|end"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_margin="@dimen/fab_margin"-->
-            <!--app:srcCompat="@drawable/pluswhite"-->
-            <!--app:backgroundTint="@color/CBSA_Blue"/>-->
+
+
+
+
+
 
     <Button
             android:id="@+id/fab"
@@ -101,6 +96,12 @@
 
     />
 
-
+    <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/tabLayout">
+    </FrameLayout>
 
 </RelativeLayout>
