--- a/ACE/app/src/main/res/layout/viewhotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/viewhotspotdetails.xml
@@ -15,11 +15,27 @@
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
     </android.support.v7.widget.Toolbar>
+    <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageView"
+            android:layout_below="@id/toolbar" android:layout_marginTop="24dp"
+            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
+            android:contentDescription="Hotspot Detail Image"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/Notes"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/notesLabel"
+            android:layout_below="@+id/imageView" android:layout_marginBottom="6dp"
+            android:textColor="@color/disabledButton" android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"/>
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:id="@+id/textView"
-            android:layout_below="@id/toolbar"/>
+            android:layout_below="@+id/notesLabel" android:text="@string/NothingToDisplay"
+            android:background="@android:color/white" android:textSize="18sp"
+            android:paddingStart="24dp" android:paddingEnd="24dp"/>
 
 </RelativeLayout>
