--- a/ACE/app/src/main/res/values/string.xml
+++ b/ACE/app/src/main/res/values/string.xml
@@ -36,7 +36,8 @@
     <string name="PrivacyPolicyContent">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway</string>
     <string name="SearchOnboarding">Use the ACE app to look up hotspots other BSOs have identified</string>
     <string name="CarOnboarding">Add Cars to the ACE database to help other BSOs search for contraband</string>
-
+    <string name="Notes">Notes</string>
+    <string name="NothingToDisplay">Nothing To Display</string>
 
     <!--Makes-->
     <string-array name="makes_array">
