--- a/ACE/app/src/main/res/layout/listview.xml
+++ b/ACE/app/src/main/res/layout/listview.xml
@@ -7,7 +7,7 @@
         android:background="@android:color/white"
 >
     <android.support.v7.widget.Toolbar
-            android:id="@+id/my_toolbar"
+            android:id="@+id/listViewToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/CBSA_Blue"
@@ -17,7 +17,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView1"
+            android:id="@+id/recyclerView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
