--- a/ACE/app/src/main/res/layout/list_item.xml
+++ b/ACE/app/src/main/res/layout/list_item.xml
@@ -24,17 +24,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="75dp">
             <TextView
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:id="@+id/txtTitle"
-                android:text=""
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:id="@+id/txtTitle"
+                    android:text=""
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:maxLines="1"/>
             <TextView
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:text=""
-                android:id="@+id/txtSubtitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:text=""
+                    android:id="@+id/txtSubtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:maxLines="1"/>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
