--- a/ACE/app/src/main/res/layout/hotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/hotspotdetails.xml
@@ -49,15 +49,17 @@
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:maxLength="256"/>
-    <!--<android.support.design.widget.FloatingActionButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:clickable="true"-->
-            <!--app:srcCompat="@drawable/microphone"-->
-            <!--android:id="@+id/floatingActionButton"-->
-            <!--app:backgroundTint="@color/CBSA_Blue"-->
-            <!--android:layout_alignParentBottom="true"-->
-            <!--android:layout_alignParentEnd="true"-->
-            <!--android:layout_margin="16dp"/>-->
+
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/microphone"
+            android:id="@+id/floatingActionButton"
+            app:backgroundTint="@color/CBSA_Blue"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"/>
 
 </RelativeLayout>
