Fixed Bug in ListView Hotspot and Added Loading Spinners

--- a/ACE/app/src/main/res/layout/hotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/hotspotdetails.xml
@@ -50,6 +50,14 @@
             android:layout_marginRight="16dp"
             android:maxLength="256"/>
 
+    <ProgressBar
+            android:id="@+id/progress_loader"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible" />
+
     <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
