--- a/ACE/app/src/main/res/layout/main.xml
+++ b/ACE/app/src/main/res/layout/main.xml
@@ -32,37 +32,48 @@
         android:text="@string/app_name"/>
 
 
-    <Button
-            android:id="@+id/SearchBttnE"
+    <!--<Button-->
+            <!--android:id="@+id/SearchBttnE"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/title"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:background="@drawable/roundedbttn"-->
+            <!--android:text="@string/English"-->
+            <!--android:textColor="#fff"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:width="350dp"-->
+            <!--android:height="55dp"-->
+            <!--android:layout_marginTop="45dp"-->
+            <!--android:textAllCaps="false"-->
+            <!--android:textSize="21sp"-->
+            <!--/>-->
+
+    <ImageButton android:id="@+id/SearchBttnE"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_centerInParent="true"
-            android:background="@drawable/roundedbttn"
-            android:text="@string/English"
-            android:textColor="#fff"
-            android:layout_centerHorizontal="true"
-            android:width="350dp"
-            android:height="55dp"
-            android:layout_marginTop="45dp"
-            android:textAllCaps="false"
-            android:textSize="21sp"
-            />
-    <Button
-            android:id="@+id/VoiceBttn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/SearchBttnE"
-            android:layout_centerInParent="true"
-            android:background="@drawable/roundedbttn"
-            android:text="@string/French"
-            android:textColor="#fff"
-            android:layout_centerHorizontal="true"
-            android:width="350dp"
-            android:height="55dp"
-            android:layout_marginTop="45dp"
-            android:textAllCaps="false"
-            android:textSize="21sp"/>
+                 android:layout_height="wrap_content"
+                 android:layout_below="@id/title"
+                 android:layout_centerInParent="true"
+                 android:layout_centerHorizontal="true"
+                 android:width="350dp"
+                 android:height="55dp"
+                 android:layout_marginTop="60dp"
+                 android:src="@drawable/englishbttn"
+                 android:background="@color/CBSA_Blue"
+    />
+
+    <ImageButton android:id="@+id/VoiceBttn"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_below="@id/SearchBttnE"
+                 android:layout_centerInParent="true"
+                 android:layout_centerHorizontal="true"
+                 android:width="350dp"
+                 android:height="55dp"
+                 android:layout_marginTop="55dp"
+                 android:src="@drawable/frenchbttn"
+                 android:background="@color/CBSA_Blue"
+    />
 
     <ImageView
         android:src="@drawable/canadafooter"
