--- a/ACE/app/src/main/res/layout/hotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/hotspotdetails.xml
@@ -28,15 +28,16 @@
 
 
     <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            tools:srcCompat="@tools:sample/avatars"
-            tools:layout_editor_absoluteY="115dp"
-            tools:layout_editor_absoluteX="141dp"
+            android:src="@drawable/addpicture"
             android:id="@+id/hotspotDetailsImageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_below="@id/toolbar"
-            android:layout_marginTop="32dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginTop="24dp"
+            android:contentDescription="@string/hotspot_detail_image"
+            android:layout_marginBottom="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"/>
     <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
