--- a/ACE/app/src/main/res/layout/main.xml
+++ b/ACE/app/src/main/res/layout/main.xml
@@ -11,10 +11,10 @@
         android:src="@drawable/settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:background="@color/CBSA_Blue"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         android:maxWidth="35dp"
         android:maxHeight="35dp"
         android:scaleType="fitCenter"
@@ -27,9 +27,20 @@
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="25dp"
-        android:textSize="42pt"
+        android:textSize="52pt"
         android:textColor="@android:color/white"
+        android:fontFamily="sans-serif-condensed"
         android:text="@string/app_name"/>
+
+    <!--<ImageView-->
+            <!--android:id="@+id/title"-->
+            <!--android:layout_width="250dp"-->
+            <!--android:layout_height="150dp"-->
+            <!--android:src="@drawable/ace"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_marginTop="50dp"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:layout_centerInParent="true"/>-->
 
 
     <!--<Button-->
@@ -50,14 +61,13 @@
             <!--/>-->
 
     <ImageButton android:id="@+id/SearchBttnE"
-            android:layout_width="wrap_content"
+                 android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:layout_below="@id/title"
+                 android:layout_below="@+id/title"
                  android:layout_centerInParent="true"
-                 android:layout_centerHorizontal="true"
                  android:width="350dp"
                  android:height="55dp"
-                 android:layout_marginTop="60dp"
+                 android:layout_marginTop="50dp"
                  android:src="@drawable/englishbttn"
                  android:background="@color/CBSA_Blue"
     />
